--- a/src/main/resources/views/competition.html
+++ b/src/main/resources/views/competition.html
@@ -502,11 +502,11 @@
                             <div class="form-group col-md-12" id="idea">
 
                                     <div>
-                                        <label for="idea-name">创意名称</label>
-                                        <input type="text" class="form-control" name="idea-name" id="idea-name"/></div>
+                                        <label for="idea-name">创意名称
+                                        <input type="text" class="form-control" name="idea-name" id="idea-name"/></label>
                                     <div>
                                         <label for="idea-description">创意描述(限300字以内)</label>
-                                        <textarea class="form-control" rows="5"  maxlength="300" id="idea-description" name="idea-description" required></textarea></div>
+                                        <textarea class="form-control" rows="5"  maxlength="300" id="idea-description" name="idea-description" required></textarea>
                                     <div>
                                         <label for="idea-market">应用前景(300字以内)</label>
                                         <textarea class="form-control" rows="5" id="idea-market" maxlength="300"
