--- a/src/main/resources/views/competition.html
+++ b/src/main/resources/views/competition.html
@@ -406,7 +406,6 @@
                                 </label>
                             </div><!--参赛人数单选框-->
                         </div>
-
                         <div class="row">
                         <div class="form-group col-md-4" id="person1">
                             <label for="name1"  class="control-label">姓名</label>
@@ -504,9 +503,11 @@
                                     <div>
                                         <label for="idea-name">创意名称
                                         <input type="text" class="form-control" name="idea-name" id="idea-name"/></label>
+                                    </div>
                                     <div>
                                         <label for="idea-description">创意描述(限300字以内)</label>
                                         <textarea class="form-control" rows="5"  maxlength="300" id="idea-description" name="idea-description" required></textarea>
+                                    </div>
                                     <div>
                                         <label for="idea-market">应用前景(300字以内)</label>
                                         <textarea class="form-control" rows="5" id="idea-market" maxlength="300"
@@ -519,8 +520,9 @@
                         </div>
 
                         <div class="text-right">
-                            <button type="submit" class="btn btn-success center-block" onclick="alert('恭喜您，报名成功！');">提交</button>
+                            <button type="submit" class="btn btn-success center-block" onclick="alert('恭喜您，报名成功！')">提交</button>
                         </div>
+
 
                     </form>
                 </div>
