--- a/src/main/resources/views/competition.html
+++ b/src/main/resources/views/competition.html
@@ -407,7 +407,7 @@
                             </div><!--参赛人数单选框-->
                         </div>
                         <div class="row">
-                        <div class="form-group col-md-4" id="person1">
+                        <fieldset class="form-group col-md-4" id="person1">
                             <label for="name1"  class="control-label">姓名</label>
                             <input type="text" class="form-control" id="name1" name="name" placeholder="请输入你的姓名" required/>
                             <div id="major1">
@@ -435,8 +435,8 @@
                                 </label>
                             </div>
 
-                        </div><!--person1-->
-                        <div class="form-group col-md-4" id="person2">
+                        </fieldset><!--person1-->
+                        <fieldset class="form-group col-md-4" id="person2">
                             <label for="name2" class="control-label">姓名</label>
                             <input type="text" name="name2" class="form-control" id="name2" placeholder="请输入姓名" required/>
 
@@ -466,8 +466,8 @@
                             </div>
 
 
-                        </div><!--person2-->
-                        <div class="form-group col-md-4" id="person3">
+                        </fieldset><!--person2-->
+                        <fieldset class="form-group col-md-4" id="person3">
                             <label for="name3" class="control-label">姓名</label>
                             <input type="text" class="form-control" id="name3" placeholder="请输入姓名" required/>
                             <div id="major3">
@@ -495,10 +495,10 @@
                                     <input type="radio" name="options-3-grade" id="options-grade2"  value="person3-大二" required> 大二
                                 </label>
                             </div>
-                        </div><!--person3-->
+                        </fieldset><!--person3-->
                         </div>
                         <div class="row">
-                            <div class="form-group col-md-12" id="idea">
+                            <fieldset class="form-group col-md-12" id="idea">
 
                                     <div>
                                         <label for="idea-name">创意名称
@@ -516,7 +516,7 @@
 
 
 
-                            </div>
+                            </fieldset>
                         </div>
 
                         <div class="text-right">
