--- a/src/main/resources/views/competition.html
+++ b/src/main/resources/views/competition.html
@@ -436,7 +436,7 @@
                             </div>
 
                         </fieldset><!--person1-->
-                        <fieldset class="form-group col-md-4" id="person2" disabled>
+                        <fieldset class="form-group col-md-4" id="person2" disabled="true">
                             <label for="name2" class="control-label">姓名</label>
                             <input type="text" name="name2" class="form-control" id="name2" placeholder="请输入姓名" required/>
 
